# pjl.rs

./: .gitignore  Cargo.toml  Component-preload-fiori-inbox.js  Component-preload-hcmfab_teapr_in.js  Krannich.drawio  README.md  Unbenanntes Diagramm.drawio  architecture-pres.md  architecture.md  dummy.js  extract-preload.js  logging.md  out.js  package-lock.json  run-postgres  sample-copy.xdd  sample-database.rs  sample.pptx  sample.schema  sapmd.rs  test.html  todo.yaml  tst.md
agent/: .gitignore  Cargo.toml  action.html  design.dot  obj.html  redirect.html  root.html
agent/src/: db.rs  main.rs
agent/src/application/: mod.rs
data-issue-tracker/: Cargo.toml  README.md  package-lock.json  package.json  ui5.yaml
data-issue-tracker/data/Comment/: Comment-a70972aa-8138-436d-b867-245ee78f3dca.yaml  Comment-de52fcb6-caef-456b-80b2-cefd51a75fd3.yaml
data-issue-tracker/data/Feature/: Feature-3990d18b-a363-40c5-8bfd-2a471d7d146a.yaml  Feature-3f04ffbd-0b8b-4815-a0c6-fd47c7bffdf3.yaml  Feature-785b94d4-43a5-46e7-b321-8990aee4988b.yaml  Feature-7edbcb8a-3a2c-4b66-8646-30d7e6b2bf2f.yaml
data-issue-tracker/data/Issue/: Issue-1d6d989a-fb03-4187-82ea-660a8fc7fe3a.yaml  Issue-43830ed1-1f51-48b7-ba09-58dafaa96c3d.yaml  Issue-5df589c7-c7b2-482e-951d-9d781497b9e5.yaml
data-issue-tracker/data/Tag/: Tag-4c023949-0595-42a3-87ac-ae6fcdadbccd.yaml  Tag-5c4d544a-4b3c-4244-849b-af84ca9189cc.yaml  Tag-f89046b3-8c64-4c1a-9bd8-45f52ff405ec.yaml
data-issue-tracker/data/Tracker/: Tracker-de20517a-1c02-4cb8-a476-f231fdba02e7.yaml
data-issue-tracker/data/User/: User-0b467828-e350-49b7-86ff-f95c9ed9c51b.yaml  User-6821019e-4f3b-4b55-b74d-74a82edd0e82.yaml  User-8bc7f6ff-f111-4f33-a0da-e375e298e371.yaml  User-d0809bb0-3679-4a39-b5e5-85a10ad8e1d1.yaml  User-f66c32e7-7fc7-4e53-8a36-8eb40e311448.yaml
data-issue-tracker/doc/: app-migration-to-btp.docx  batching_requests_with_odata.md  class-diagram.puml  gregors-thoughts-on-btp.drawio.xml  gregors-thoughts-on-btp.md  konzept-nouns.txt  konzept.md  sap-apps.md
data-issue-tracker/entity-model/: attachmend.yaml  comment.yaml  data-object.yaml  data-source.yaml  feature.yaml  issue.yaml  object-cluster.yaml  priority.yaml  tag.yaml  tracker.yaml  user.yaml
data-issue-tracker/fiori/: services.cds
data-issue-tracker/fiori/appconfig/: fioriSandboxConfig.json
data-issue-tracker/fiori/router/: xs-app.json
data-issue-tracker/fiori/vp0/: README.md  annotations.cds  package-lock.json  package.json  ui5-deploy.yaml  ui5.yaml
data-issue-tracker/fiori/vp1/: README.md  annotations.cds  package-lock.json  package.json  ui5-deploy.yaml  ui5.yaml
data-issue-tracker/fiori/vp2/: README.md  annotations.cds  package-lock.json  package.json  ui5-deploy.yaml  ui5.yaml  xs-app.json
data-issue-tracker/fiori/vp3/: README.md  annotations.cds  package-lock.json  package.json  ui5-deploy.yaml  ui5.yaml
data-issue-tracker/fiori/vp4/: README.md  annotations.cds  (+4 more)
data-issue-tracker/forms/: Attachment.yaml  Comment.yaml  DataObject.yaml  DataSource.yaml  Issue.yaml  ObjectCluster.yaml  Priority.yaml  Tag.yaml  Tracker.yaml  User.yaml
data-issue-tracker/requests/: 1.http  api.http  apiv4.http  northwind-odatav2.http  northwind.http
data-issue-tracker/requirements/: 01-create-issue.yaml  02-update-issue.yaml  03-retrieve-issue.yaml  04-simple-api.yaml
data-issue-tracker/src/: batch.rs  lib.rs  odata.rs  odatav4.rs
data-issue-tracker/templates/: edit.hbs  list.hbs  records.hbs
data-issue-tracker/tests/: apiv4.http  northwind-odatav2.http  odatav4.rs  odatav4_private.rs  odatav4_public.rs
data-issue-tracker/view/: Attachment.yaml  Comment.yaml  DataObject.yaml  DataSource.yaml  Issue.yaml  ObjectCluster.yaml  Priority.yaml  Tag.yaml  Tracker.yaml  User.yaml
data-issue-tracker/web/: .keep  edit.js  list.js  records.js  style.css
data-issue-tracker/webapp/: App.controller.js  App.view.xml  Component.js  index.html  index.js  manifest.json
dbc/: Cargo.toml  sample.schema
dbc/examples/: postgres-test.rs  sqlite-test.rs
dbc/src/: lib.rs
dbx/: .gitignore  Cargo.toml  data.yaml  out
dbx/examples/: log.rs  person.rs
dbx/src/: dbimpl.rs  error.rs  lib.rs  ser.rs
dbx/tests/: data.rs  dbx.rs  de.rs  ser.rs
edm/: Cargo.toml  csdl.md  evl.js  metadata.xml  schema.yaml  tmp.js
edm/docs/: [MC-CSDL]-170601.docx  [MC-EDMX]-170316.docx  cqn.md  csdl.md  csn-alt.md  csn.md  cxn.md  edmx.md
edm/examples/: csn_load.rs  define_schema.rs  service.csn
edm/src/: csn.rs  lib.rs  list.rs  number.rs  primitive.rs  structure.rs  value.rs
edm/trippin/: triping.yaml
pjl-file-server/: Cargo.toml
pjl-file-server/src/: main.rs
pjl-micro-blog/: Cargo.toml  db.sql
pjl-micro-blog/src/: main.rs
pjl-micro-blog/templates/: edit.hbs  index.hbs  new.hbs
pjl-micro-blog/wiki/: idoc.md  idoc.wiki
pjl-pg/: Cargo.toml  bookshop.csn  ddl.sql  def.yaml  person.yaml
pjl-pg/data/: versandplanung.csn
pjl-pg/examples/: pg-create-tables.rs  pg-from-csn.rs  pg-sample-1.rs
pjl-pg/src/: lib.rs  types.rs
pjl-pg/tests/: basic.rs  con.rs  conn.rs  types.rs
pjl-proto/: Cargo.toml
pjl-proto/src/: lib.rs
processing-node/: Cargo.toml  convert-squeak-sources  s1.script  sample.script  startup.script  syntax.txt  v1.script  v2.script
processing-node-client/: Cargo.toml
processing-node-client/examples/: message-client.rs
processing-node-client/src/: dispatch.rs  lib.rs  sync.rs
processing-node/examples/: hello-node.rs  message-client.rs  script-client.rs
processing-node/src/: lib.rs  non_sync.rs  parser.rs  sync.rs
simple-file-server/: Cargo.toml
simple-file-server/assets/: dummy.txt
simple-file-server/src/: main.rs
simple-rest-server/: Cargo.toml  inwerken-req.http  metadata.xml  person.sqlite  sample-local.http  sample-requests.http  sample-time.http  schema.xml
simple-rest-server/src/: main.rs
thumb-node/: Cargo.toml
thumb-node/examples/: message-client.rs
thumb-node/src/: main.rs
xdd/: Cargo.toml  actor.ddl  km-sd.sql  sample-database.xdd
xdd/examples/: core.xdd  km-sd.xdd  sql_gen.rs  sql_sel.rs
xdd/src/: file.rs  lib.rs  sql.rs
(+494 files in other folders)
