[workspace]
resolver = "2"
members = [
    "dbx",
    "xdd",
    "edm",
    "simple-file-server", 
    "simple-rest-server", 
    "compound-material", 
    "navi", 
    "xml_derive", 
    "dbc", 
    "processing-node", 
    "pjl-tui", 
    "pjl-todo", 
    "pjl-tab", 
    "pjl-pg", 
    "pjl-odata", 
    "pjl-error", 
    "thumb-node", "processing-node-client", "pjl-static-strings", "pjl-file-server"]

