[workspace]
resolver = "2"
members = [
    "dbx",
    "xdd",
    "edm",
    "simple-file-server", 
    "simple-rest-server", 
    "compound-material", 
    "navi", 
    "xml_derive", 
    "dbc", 
    "processing-node", 
    "data-issue-tracker",
    "pjl-tui", 
    "pjl-todo", 
    "pjl-tab", 
    "pjl-pg", 
    "pjl-odata", 
    "pjl-error", 
    "processing-node-client", 
    "pjl-static-strings", 
    "pjl-file-server", 
#    "thumb-node",
    "pjl-cache", "pjl-terminal-tools",
    "excel-cell-replace"
, "key-sim"]


