[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing", "headers", "multipart", "ws", "http2", "tokio"] }
axum-server = "0.5.1"
clap = { version = "4.3.11", features = ["derive", "env"] }
lazy_static = "1.4.0"
minijinja = { version = "1.0.3", features = ["loader", "json", "serde_json"] }
pjl-proto = { version = "0.1.0", path = "../pjl-proto" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.169", features = ["derive", "serde_derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
zip = "0.6.6"
