[package]
name = "data-issue-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
handlebars = "6.3.2"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { git = "https://github.com/hapejot/serde-yaml.git", version = "0.9.35" }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.6", features = ["fs"] }
