[package]
name = "data-issue-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { git = "https://github.com/hapejot/serde-yaml.git", version = "0.9.35" }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.6", features = ["fs"] }
sha2 = "0.10.9"
base64 = "0.22.1"
futures = "0.3.31"
http-body-util = "0.1.3"
chrono = "0.4.41"
axum-macros = "0.5.0"
http = "1.3.1"
tower = "0.5.2"
docx-rs = "0.4.17"
scraper = "0.23.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
humantime = "2.2.0"
pjl-pg = { version = "0.1.0", path = "../pjl-pg" }
pjl-tab = { version = "0.1.0", path = "../pjl-tab" }
edm = { version = "0.1.0", path = "../edm" }
