[package]
name = "edm"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = { git = "https://github.com/hapejot/serde-yaml.git", version = "0.9.35" }
xml-rs = { version = "0.8.22", git = "https://github.com/hapejot/xml-rs.git" }
xml_derive = { version = "*", path = "../xml_derive" }
