[package]
name = "pjl-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4.0", features = ["std", "serde"] }
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.160", features = ["alloc", "derive", "serde_derive", "rc"] }
serde-xdr = { git = "https://github.com/hapejot/serde-xdr.git", version = "0.6.0" }
serde_bytes = "0.11.9"
serde_derive = "1.0.160"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
zip = "0.6.4"