[package]
name = "xdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
santiago = { git = "https://github.com/hapejot/santiago.git", version = "1.3.1" }
serde = { version = "1.*", features = ["derive"] }
serde_yaml = { git = "https://github.com/hapejot/serde-yaml.git", version = "0.9.*" }
